--- a/_includes/themes/ealkim/page.html
+++ b/_includes/themes/ealkim/page.html
@@ -2,8 +2,8 @@
 <div class="container">
 
 <header>{% if page.img %}
-<table style='height:200px;'><tr> <td width="750px"><h1 
-style='margin-right:0px;'>{{ page.title }}</h1></td><td> <img width='120px' 
+<table style='height:200px;'><tr> <td width=86%><h1 
+style='margin-right:0px;'>{{ page.title }}</h1></td><td> <img width=120px 
 src='{{ page.img }}' title='Erdem Alkım' alt='Photo of Erdem Alkım'/></td> 
 </tr>
 
